# ATLAS

./: .gitignore  README.md
assistant-core/: AGENTS.md  README.md  pyproject.toml
assistant-core/.codex/: config.toml
assistant-core/.cursor/rules/: cursor-project-context.mdc
assistant-core/.github/: copilot-instructions.md
assistant-core/app/: __init__.py  cli.py  paths.py
assistant-core/app/actions/: __init__.py  audit.py  intent_router.py  models.py  permission.py  preview.py  risk.py  types.py
assistant-core/app/agents/: __init__.py  base.py  code_reviewer_agent.py  documentation_agent.py  (+7 more)
assistant-core/tests/: conftest.py  support_registry.py  test_action_models.py  test_ai_agent_cli.py  test_ai_approval_cli.py  test_ai_calendar_cli.py  test_ai_chat_cli.py  test_ai_cli.py  test_ai_config.py  test_ai_context_loader.py  test_ai_demo_cli.py  test_ai_device_cli.py  test_ai_docs_audit_cli.py  test_ai_execution_cli.py  test_ai_hardening_cli.py  test_ai_home_preview_cli.py  test_ai_intent_cli.py  test_ai_main_cli.py  test_ai_mock_provider.py  test_ai_ollama_provider.py  test_ai_panel_cli.py  test_ai_pc_preview_cli.py  test_ai_personal_memory_cli.py  test_ai_plan_cli.py  test_ai_prompt_composer.py  test_ai_reminder_cli.py  test_ai_review_cli.py  test_ai_routine_cli.py  test_ai_security_audit_cli.py  test_ai_voice_cli.py  test_approval_evaluator.py  test_calendar_service.py  test_cli_smoke.py  test_code_reviewer_agent.py  test_command_guard.py  test_config_validate.py  test_conversation_loop.py  test_demo_runner.py  test_demo_scenarios.py  test_device_registry.py  (+34 more)
(+269 files in other folders)
