[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atlas-assistant-core"
version = "0.1.0"
description = "ATLAS AI Assistant Sprint 1 CLI core."
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12.3",
  "rich>=13.7.1",
  "pydantic>=2.7.0",
  "jinja2>=3.1.4",
  "sqlalchemy>=2.0.30",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[project.scripts]
atlas = "app.cli:main"
